# p1-reader-premises

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml
data/: test.txt
docker/p1reader/: docker-compose.yml
docker/services/: docker-compose.yml
docker/services/grafana/dashboards/: default.yaml
docker/services/grafana/dashboards/p1-reader/: gaswaterlogger.json  measurementLogger.json  measurementOverview.json  peakLogger.json
docker/services/grafana/datasources/: timescaledb.yaml
notebooks/: read_db_data.ipynb
p1reader/: __main__.py
p1reader/service/: __init__.py  reader.py  service.py
p1reader/sinks/: __init__.py  config.py  data_sink.py  db_operations.py  db_sink.py  dump_sink.py  mqtt_sink.py  screen_sink.py
p1reader/sources/: __init__.py  data_source.py  file_source.py  port_source.py
requirements/: dev.txt  opt.txt  prod.txt  test.txt
rpi-install/: install.sh  install_device.md  network.sh
rpi-install/config/: dhcpcd.conf.ap  dhcpcd.conf.wifi  dnsmasq.conf  hostapd.conf
test/: conftest.py  test_reader_service.py  test_sinks.py  test_sources.py
utils/: backup.py  restore.py
