[tool.mypy]
disallow_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "dsmr_parser.*",
]

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = ["*/test*", "*__init__*"]

[tool.poetry]
name = "p1-reader"
version = "0.1.0"
description = "P1 service utility for Belgian Smart Meters"
authors = ["Emilio J. Palacios-Garcia <emiliojose.palaciosgarcia@kuleuven.be>"]
readme = "README.md"
packages = [{include = "p1reader"}]

[tool.poetry.dependencies]
python = ">3.9.1,<4.0"
pydantic = "^2.4.2"
pytz = "^2025.1"
dsmr-parser = "^1.4.3"
paho-mqtt = "^2.1.0"
pyyaml = "^6.0"
argparse = "^1.4.0"
pydantic-settings = "^2.0.1"
python-dateutil = "^2.8.2"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}
cryptography = "^44.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-coverage = "^0.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.6.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.opt.dependencies]
jupyterlab = "^4.4.1"
pandas = "^2.0.2"
matplotlib = "^3.8.0"
ipympl = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
